submit buttons no longer have a top margin on mobile

--- a/app/assets/stylesheets/pure_css_reset.css.scss
+++ b/app/assets/stylesheets/pure_css_reset.css.scss
@@ -187,6 +187,12 @@ a.pure-button-primary, .pure-button-primary {
     }
   }
 
+  @media only screen and (max-width: 480px) {
+    button[type="submit"] {
+      margin: 0;
+    }
+  }
+
   .pure-control-group.control-group-with-error {
     input {
       color: #b94a48;
